// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-sc-t8lkk2-0 bzQrbs"
  data-testid="header-bg"
>
  <div
    class="header__Container-sc-t8lkk2-1 bEDcdp"
  >
    <p
      class="header__Link-sc-t8lkk2-2 dhVuwR"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-sc-t8lkk2-1 bEDcdp"
>
  <p
    class="header__Link-sc-t8lkk2-2 ehqIHZ"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header> with a background 1`] = `
<div
  class="header__Background-sc-t8lkk2-0 kSKPGm"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-sc-t8lkk2-1 bEDcdp"
  >
    <div
      class="header__Group-sc-t8lkk2-3 iHmbZU"
    >
      <p
        class="header__Link-sc-t8lkk2-2 ehqIHZ"
      >
        Series
      </p>
      <p
        class="header__Link-sc-t8lkk2-2 ehqIHZ"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-sc-t8lkk2-3 iHmbZU"
    >
      <div
        class="header__Search-sc-t8lkk2-5 jldyvg"
      >
        <button
          class="header__SearchIcon-sc-t8lkk2-6 gSYwqV"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-sc-t8lkk2-4 ctCfef"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-sc-t8lkk2-10 eyfxCQ"
      >
        <button
          class="header__Picture-sc-t8lkk2-8 jSpyzQ"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-sc-t8lkk2-9 cGILoT"
        >
          <div
            class="header__Group-sc-t8lkk2-3 iHmbZU"
          >
            <button
              class="header__Picture-sc-t8lkk2-8 jSpyzQ"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-sc-t8lkk2-2 ehqIHZ"
            >
              Karl Hadwen
            </p>
          </div>
          <div
            class="header__Group-sc-t8lkk2-3 iHmbZU"
          >
            <p
              class="header__Link-sc-t8lkk2-2 ehqIHZ"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-sc-t8lkk2-1 header__Feature-sc-t8lkk2-11 bEDcdp cDcyFR"
  >
    <h2
      class="header__FeatureCallOut-sc-t8lkk2-12 fmFUXr"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-sc-t8lkk2-13 kKtHKX"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-sc-t8lkk2-15 kqrLda"
    >
      Play
    </button>
  </div>
</div>
`;
